--- a/parts/profile/profile.jade
+++ b/parts/profile/profile.jade
@@ -67,35 +67,36 @@ template(name='profile_layout')
                         a.ui.compact.button.select_term.no_blink(href="/u/#{username}/" class="{{isActiveRoute 'user_dashboard'}}" title="#{user.username} dashboard")
                             i.large.dashboard.icon
                             span dashboard
-                        a.ui.compact.button.select_term.no_blink(href="/u/#{username}/posts" class="{{isActiveRoute 'user_posts'}}" title="#{user.username} posts")
-                            i.newspaper.large.icon
-                            |#{user_post_count}
-                            span posts
-                        a.ui.compact.button.select_term.no_blink(href="/u/#{username}/comments" class="{{isActiveRoute 'user_comments'}}" title="#{user.username} comments")
-                            i.chat.large.icon
-                            |#{user_comment_count}
-                            span comments
-                        a.ui.compact.button.select_term.no_blink(href="/u/#{username}/credits" class="{{isActiveRoute 'user_credits'}}" title="#{user.username} credits")
-                            i.large.chevron.down.icon
-                            span pts received
-                        a.ui.compact.button.select_term.no_blink(href="/u/#{username}/sent" class="{{isActiveRoute 'user_sent'}}" title="#{user.username} sent")
-                            i.large.gift.icon
-                            span pts sent
-                        a.ui.compact.button.select_term.no_blink(href="/u/#{username}/credit" class="{{isActiveRoute 'user_credit'}}" title="#{user.username} credit")
-                            i.large.dollar.icon
-                            span credit
-                        a.ui.compact.button.select_term.no_blink(href="/u/#{username}/tips" class="{{isActiveRoute 'user_tips'}}" title="#{user.username} tips")
-                            i.donate.large.icon
-                            span tips
-                        a.ui.compact.button.select_term.no_blink(href="/u/#{username}/groups" class="{{isActiveRoute 'user_groups'}}" title="#{user.username} groups")
-                            i.users.large.icon
-                            span groups
-                        a.ui.compact.button.select_term.no_blink(href="/u/#{username}/friends" class="{{isActiveRoute 'user_friends'}}" title="#{user.username} friends")
-                            i.users.large.icon
-                            span friends
-                        a.ui.compact.button.select_term.no_blink(href="/u/#{username}/vault" class="{{isActiveRoute 'user_vault'}}" title="#{user.username} friends")
-                            i.lock.large.icon
-                            span vault
+                        if currentUser
+                            a.ui.compact.button.select_term.no_blink(href="/u/#{username}/posts" class="{{isActiveRoute 'user_posts'}}" title="#{user.username} posts")
+                                i.newspaper.large.icon
+                                |#{user_post_count}
+                                span posts
+                            a.ui.compact.button.select_term.no_blink(href="/u/#{username}/comments" class="{{isActiveRoute 'user_comments'}}" title="#{user.username} comments")
+                                i.chat.large.icon
+                                |#{user_comment_count}
+                                span comments
+                            a.ui.compact.button.select_term.no_blink(href="/u/#{username}/credits" class="{{isActiveRoute 'user_credits'}}" title="#{user.username} credits")
+                                i.large.chevron.down.icon
+                                span pts received
+                            a.ui.compact.button.select_term.no_blink(href="/u/#{username}/sent" class="{{isActiveRoute 'user_sent'}}" title="#{user.username} sent")
+                                i.large.gift.icon
+                                span pts sent
+                            a.ui.compact.button.select_term.no_blink(href="/u/#{username}/credit" class="{{isActiveRoute 'user_credit'}}" title="#{user.username} credit")
+                                i.large.dollar.icon
+                                span credit
+                            a.ui.compact.button.select_term.no_blink(href="/u/#{username}/tips" class="{{isActiveRoute 'user_tips'}}" title="#{user.username} tips")
+                                i.donate.large.icon
+                                span tips
+                            a.ui.compact.button.select_term.no_blink(href="/u/#{username}/groups" class="{{isActiveRoute 'user_groups'}}" title="#{user.username} groups")
+                                i.users.large.icon
+                                span groups
+                            a.ui.compact.button.select_term.no_blink(href="/u/#{username}/friends" class="{{isActiveRoute 'user_friends'}}" title="#{user.username} friends")
+                                i.users.large.icon
+                                span friends
+                            a.ui.compact.button.select_term.no_blink(href="/u/#{username}/vault" class="{{isActiveRoute 'user_vault'}}" title="#{user.username} friends")
+                                i.lock.large.icon
+                                span vault
                         if is_dev
                             +print_this
                         .ui.hidden.divider
