fix group tags, v1 post request

--- a/parts/blocks.jade
+++ b/parts/blocks.jade
@@ -24,6 +24,10 @@ template(name='comments_view_small')
                 div
 
 
+template(name='session_edit_toggle')
+    .ui.icon.button.toggle_edit(class=toggle_button_class)
+        i.pencil.icon
+
 
 
 
